Add signal handler Add syslog Clean up auto tools

--- a/configure.ac
+++ b/configure.ac
@@ -57,7 +57,7 @@ CPPFLAGS="$CPPFLAGS $XML2_INCLUDE"
 # Checks for libraries.
 
 # Checks for header files.
-AC_CHECK_HEADERS([arpa/inet.h netinet/in.h stdlib.h string.h sys/socket.h pcap.h libxml/parser.h mysql.h syslog.h sys/types.h sys/wait.h])
+AC_CHECK_HEADERS([arpa/inet.h netinet/in.h stdlib.h string.h sys/socket.h pcap.h libxml/parser.h mysql.h syslog.h sys/types.h sys/wait.h stdlib.h unistd.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
 
